issue with img hight on mobile fixed

--- a/src/styles/blocks/design.scss
+++ b/src/styles/blocks/design.scss
@@ -2,7 +2,7 @@
   &__block {
     display: flex;
     flex-direction: column;
-    max-height: 390px;
+    min-height: 390px;
     margin-bottom: 110px;
     &--1 {
       @include onTablet {
